
  [ Cyril Brulebois ]
  * Update task-serbian-kde-desktop's Depends: Drop koffice-i18n-sr and
    koffice-i18n-srlatin, thanks to Ana Guerrero (Closes: #673470).
    Indeed, koffice is being removed from the archive.

  [ Bastian Blank ]
  * Remove manual task.
  * Remove unused support for Packages: task-fields.
  * Completely remove support for aptitude task syntax.

 -- Christian Perrier <bubulle@debian.org>  Sun, 25 Mar 2012 14:52:49 +0200

tasksel (3.09) unstable; urgency=low

  [ Translations of tasks ]
  * Polish (Michał Kułach). Closes: #657267
  * Kannada (Prabodh C P). Closes: #660071

  [ Translations of debconf templates ]
  * Kannada (Vikram Vincent).  Closes: #660070

  [ Christian Perrier ]
  * No longer install x-ttcidfont-conf for chinese-s-desktop
    Closes: #660057
  * No longer install x-ttcidfont-conf for chinese-t-desktop
    Closes: #660058
  * Add util-linux-locales to French, Polish and Czech tasks
    Closes: #659840

  [ Joey Hess ]
  * Remove apmd. Closes: #665466

 -- Otavio Salvador <otavio@debian.org>  Sat, 24 Mar 2012 17:41:35 -0300

tasksel (3.08) unstable; urgency=low

  [ Christian Perrier ]
  * Switch from kerneloops to kerneloops-applet. Closes: #650960

  [ Joey Hess ]
  * Remove broffice.org from pt_BR desktop, package is removed from debian.

  [ Theppitak Karoonboonyanan ]
  * Update task-thai-gnome-desktop and task-thai-kde-desktop:
    - task-thai-gnome-desktop: Add gtk3-im-libthai
    - task-thai-kde-desktop: Add libthai-dev (which enhances libkhtml5)
  
  [ Changwoo Ryu ]
  * Update task-korean-desktop and task-korean-gnome-desktop:
    - Add ibus-gtk3 to task-korean-gnome-desktop
    - Replace ttf-* with fonts-*

  [ Joey Hess ]
  * Use dpkg-query to list packages, rather than parsing the status file.
  * Deal with Description-md5 fields in apt-cache show output.
    Closes: #657389

 -- Joey Hess <joeyh@debian.org>  Sun, 29 Jan 2012 17:48:39 -0400

tasksel (3.07) unstable; urgency=low

  * Team upload