@@ -47,6 +47,10 @@ tasksel (3.10) UNRELEASED; urgency=low
   * Remove manual task.
   * Remove unused support for Packages: task-fields.
   * Completely remove support for aptitude task syntax.
+  * Use apt-get.
+    - Force installation of recommends even if turned off.
+    - Force auto-removal of packages.
+    - Don't longer remove packages. (closes: #579522)
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 25 Mar 2012 14:52:49 +0200
 
